# macondo

./: .travis.yaml  .travis.yml  Cargo.toml  README.md  build.sh
doc/adr/: 0001-record-architecture-decisions.md  0002-remove-bootstraped-commands.md  0003-remote-repositories-management.md  0004-allow-easily-publishing-of-commands-and-repositories.md  0005-remove-unnecessary-commands.md  0006-allow-printing-the-contents-of-the-repositories.md  0007-automatic-aligning-of-user-host-user-for-better-interoperability.md
examples/: ls.mcd
src/: lib.rs
src/app/: cmd_builder.rs  core.rs  mod.rs  repo_management.rs
src/cmd/: executer.rs  mod.rs  parser.rs
src/config/: mod.rs
src/docker/: mod.rs  user-alignment.sh  volumes.rs
src/exec/: mod.rs
src/util/: cache.rs  mod.rs  paths.rs  progress_bar.rs
