[package]
name = "macondo"
version = "0.1.1"
authors = ["Cristian <me@cristian.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.51"
text_io = "0.1.8"
colored = "1.9"
users = "0.10"
reqwest = { version = "0.10.4", features = ["blocking"] }
easy-error = "0.3.1"
tempfile = "3"
walkdir = "2"
indicatif = "0.14.0"
fstrings = "0.2.3"
